# SAL_extraction

./: .gitignore  Cargo.toml  test.csv
python-producers/time_series/: alphavantage_time_series.py  format.txt  response.json
rust-producers/alphavantage_extractor/: Cargo.toml
rust-producers/alphavantage_extractor/src/: alphavantage_request.rs  dev_json.rs  main.rs  response_writers.rs
rust-producers/csv_insertion_handler/: Cargo.toml
rust-producers/csv_insertion_handler/src/: main.rs  query_library.rs
rust-producers/time_series_daily/: Cargo.toml
rust-producers/time_series_daily/src/: alphavantage_request.rs  main.rs
