[package]
name = "alphavantage_extractor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
csv = "1.3.0"
dotenv = "0.15.0"
reqwest = { version = "0.11.24", features = ["json"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["full"] }
