[package]
name = "time_series_daily"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_nested_with = "0.2.3"
serde_test = "1.0.176"
serde_with = "3.6.0"
time = { version = "0.3.34", features = ["serde", "formatting", "parsing"] }
tokio = { version = "1.36.0", features = ["full"] }
